# ori

./: Cargo.toml  OWNERSHIP.md  README.md  flake.nix  justfile  spec.md
notes/: comments.md  compiler-passes.md  compiler-phases.md  constraints.md  fold.md  functions.md  ideas.md  methods.md  modules.md  operators.md  parser.md  pattern-matching.md  record-builders.md  records.md  strings.md  tags-impl.md  tags.md  tooling.md  tuples.md
programs/: bool.ori  cat.ori  conditional.ori  double.ori  echo.ori  foo.ori  hello.ori  import_file.ori  list_import.ori  list_sum.ori  math.ori  merge_sort.ori  nat_to_i64.ori  records.ori  test.ori  test_rc.ori  tree_sum.ori
programs/aoc/: 201501.ori  201502.ori  201503.ori  201504.ori  bench_md5.ori  md5.ori  parser.ori
spec/: fold.md  pattern-matching.md  todo.md  tuples.md
src/: ast.rs  ast_display.rs  builder.rs  decl_info.rs  defunc.rs  error.rs  eval.rs  flatten_patterns.rs  fold_lift.rs  infer.rs  ir.rs  lambda_lift.rs  lambda_solve.rs  lambda_specialize.rs  lower.rs  main.rs  mono.rs  numeric.rs  ori.pest  parse.rs  reachable.rs  resolve.rs  source.rs  stdlib.rs  symbol.rs  test_frontend.rs  test_programs.rs  token.rs  topo.rs  types.rs
src/core/: builder.rs  eval.rs  mod.rs
src/ir/: builder.rs  core.rs  eval.rs  mod.rs
src/passes/: decl_info.rs  flatten_patterns.rs  fold_lift.rs  lambda_lift.rs  lambda_solve.rs  lambda_specialize.rs  mod.rs  mono.rs  reachable.rs  resolve.rs  topo.rs
src/ssa/: builder.rs  const_eval.rs  display.rs  eval.rs  inline.rs  instruction.rs  lower.rs  mod.rs  opt.rs  ownership.rs  rc.rs  sroa.rs  static_promote.rs  validate.rs
src/syntax/: ast.rs  grammar.pest  mod.rs  parse.rs  raw.rs  raw_display.rs
src/types/: engine.rs  infer.rs  mod.rs  post_infer.rs
standard/: bool.ori  f64.ori  i16.ori  i32.ori  i64.ori  i8.ori  list.ori  maybe.ori  order.ori  result.ori  set.ori  str.ori  u16.ori  u32.ori  u64.ori  u8.ori
(+19 files in other folders)
